--- a/src/app/post-login/post-login.component.scss
+++ b/src/app/post-login/post-login.component.scss
@@ -1,14 +1,15 @@
-app-header{
-    height: 120px;
+app-header {
+  height: 120px;
 }
 
-app-footer{
-    height: 167px;
+app-footer {
+  height: 167px;
 }
 
 .container-wrapper {
-    min-height: 100vh;
-    .routing-page{
-        flex: 1;
-    }
+  min-height: 100vh;
+  .routing-page {
+    flex: 1;
+    position: relative;
+  }
 }
