--- a/src/app/post-login/components/home/home.component.scss
+++ b/src/app/post-login/components/home/home.component.scss
@@ -1,101 +1,225 @@
 .home {
   max-width: 1920px;
+}
 
-  .header-wrapper {
-    margin: 69px auto 40px 8vw;
-    @media screen and (min-width: 1450px) {
-      margin: 69px auto 40px 8vw;
-    }
-    @media screen and (min-width: 1750px) {
-      margin: 69px auto 40px 14.4vw;
-    }
-    @media screen and (min-width: 1920px) {
-      margin: 69px auto 40px 278px;
-    }
+.header-wrapper {
+  padding: 28px 80px 40px 80px;
+  background-color: #f6f6f6;
+}
 
-    .heading {
-      font-size: 30px;
-      color: #215777 !important;
-      font-weight: bold;
-    }
+.heading {
+  font-size: 30px;
+  color: #0b4569 !important;
+  font-weight: bold;
+}
+
+form {
+  gap: 31px;
+}
+
+.form-section {
+  margin: 33px 0 28px 0;
+}
+
+.label-text {
+  color: #2f2f2f;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+  margin-bottom: 7px;
+}
+
+.dropdown {
+  height: 40px;
+  content: "All LOcations";
+}
+
+.date-section {
+  height: 40px;
+  border-radius: 2px;
+  background: #fff;
+}
+
+.btn {
+  height: 32px;
+  border-radius: 2px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.2px;
+
+  &-submit {
+    width: 88px;
+    background-color: #0b4569;
+    padding: 8px 17px;
   }
 
-  .card-wrapper {
-    margin: 0 307px 115px;
-    width: 1346px;
-    gap: 3vw;
-    padding-top: 23.5px !important;
-    @media screen and (min-width: 1300px) {
-      gap: 5vw;
-    }
-    @media screen and (min-width: 1400px) {
-      gap: 6.7vw;
-    }
-    @media screen and (min-width: 1920px) {
-      gap: 130px;
-    }
+  &-reset {
+    width: 86px;
+    color: #083754;
+    line-height: 16px;
+    border: 2px solid #083754;
+    padding: 8px 10px;
+  }
 
-    .k-card {
-      max-width: 330px;
-      min-height: 506px;
-      border: none;
-      box-shadow: 0px 0px 30px #00000029;
-
-      .k-card-body {
-        padding: 30px 23px 61px;
-
-        .card-hedear {
-          font-size: 22px;
-          color: #8f3040;
-          font-weight: bold;
-          margin-bottom: 20px;
-          letter-spacing: 0;
-        }
-
-        .img-wrapper {
-          height: 210px;
-          margin-bottom: 32px;
-
-          img {
-            width: 200px;
-          }
-        }
-
-        p {
-          min-height: 100px;
-          margin-right: 15px;
-          margin-bottom: 29px;
-          color: #262626;
-          letter-spacing: 0;
-        }
-      }
-
-      .k-card-actions {
-        .k-button {
-          font-weight: bold;
-          font-size: 14px;
-          border-width: 3px;
-          border-radius: 0;
-          color: #0a4569;
-          padding: 10px 16px;
-          border-color: #0a4569;
-        }
-        .k-button:hover {
-          background-color: #fff;
-        }
-      }
-    }
+  &-update {
+    background: #083754;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 35px;
+    padding: 5px 15px;
   }
 }
 
-.btn-disabled {
-  background: #e6e6e6 0% 0% no-repeat padding-box;
+.card-section {
+  color: #1e1e1e;
+  gap: 31px;
+  margin-bottom: 28px;
+}
+
+.card {
+  flex-grow: 1;
+  border-radius: 2px;
   border: none;
-  width: 168px;
-  height: 46px;
+  box-shadow: #837575;
+  width: 100%;
+
+  &_top {
+    margin: 14px 0 8px 15px;
+  }
+  &_mid {
+    margin: 0 0 8px 15px;
+    height: 41px;
+    gap: 13px;
+    align-items: center;
+  }
+
+  &-title {
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: -0.4px;
+    margin-bottom: 0px;
+  }
+
+  &-subtitle {
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: -0.42px;
+  }
+
+  &-count {
+    color: #0b4569;
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: -1.08px;
+  }
+
+  &-upDowns {
+    font-size: 12px;
+    font-weight: 700;
+  }
+  &-up {
+    color: #1fa20a;
+  }
+  &-down {
+    color: #f57f17;
+  }
+
+  &-prev {
+    font-size: 12px;
+    font-weight: 400;
+  }
+
+  &-rate {
+    width: 100%;
+    height: 28px;
+    border-radius: 0px 0px 2px 2px;
+    background: #8fd0e7;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.btn-disabled:disabled {
-  color: #165477 !important;
-  opacity: 1;
+.chart_section {
+  height: 527px;
+  background-color: #fff;
+}
+
+.chart {
+  padding: 36px 16px 0 35px;
+
+  &-header {
+    height: 73px;
+    padding: 29px 32px 0 47px;
+  }
+}
+
+.dateRange {
+  color: #0b4569;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: -0.72px;
+}
+
+.input {
+  flex: 1;
+  &-date {
+    flex: 1.3;
+  }
+}
+
+.buttons-container {
+  flex: 0.7;
+  margin-left: -8px;
+  margin-top: 31px;
+  gap: 24px;
+  svg {
+    margin-top: -3px;
+  }
+}
+
+.chart-legends {
+  font-size: 14px;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+}
+
+.orange-line {
+  background-color: #ed9f22;
+}
+
+.green-line {
+  background-color: #7cb342;
+}
+
+.purple-line {
+  background-color: #b31f5f;
+}
+
+.blue-line {
+  background-color: #0b4569;
+}
+
+.legend-lines {
+  width: 50px;
+  height: 3px;
+}
+
+.custom-gap-20 {
+  gap: 20px;
+}
+
+.custom-gap-11 {
+  gap: 11px;
 }
