--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import "./../node_modules/bootstrap/scss/bootstrap.scss";  
-@import '/node_modules/ag-grid-community/styles/ag-grid.css';
-@import '/node_modules/ag-grid-community/styles/ag-theme-balham.css';
-@import '/node_modules/@progress/kendo-theme-default/scss/all.scss';
+@import "./../node_modules/bootstrap/scss/bootstrap.scss";
+@import "/node_modules/ag-grid-community/styles/ag-grid.css";
+@import "/node_modules/ag-grid-community/styles/ag-theme-balham.css";
+@import "/node_modules/@progress/kendo-theme-default/scss/all.scss";
 /* You can add global styles to this file, and also import other style files */
 $font-family: "Helvetica Neue";
 
@@ -11,17 +11,24 @@ body {
 }
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/HelveticaNeue Medium.ttf');
+  font-family: "Helvetica Neue";
+  src: url("./assets/fonts/HelveticaNeue Medium.ttf");
 }
 
 @font-face {
-  font-family: 'Proxima Nova';
-  src: url('./assets/fonts/ProximaNova.ttf');
+  font-family: "Proxima Nova";
+  src: url("./assets/fonts/ProximaNova.ttf");
 }
 
 body {
   margin: 0;
-  font-family: 'Helvetica Neue', 'Proxima Nova';
+  font-family: "Helvetica Neue", "Proxima Nova";
   transition: all 0.6s ease;
+}
+
+.loader-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
