--- a/src/app/post-login/components/home/home.component.scss
+++ b/src/app/post-login/components/home/home.component.scss
@@ -4,7 +4,6 @@
 
 .header-wrapper {
   padding: 28px 80px 40px 80px;
-  background-color: #f6f6f6;
 }
 
 .heading {
@@ -17,10 +16,6 @@ form {
   gap: 31px;
 }
 
-.form-section {
-  margin: 33px 0 28px 0;
-}
-
 .label-text {
   color: #2f2f2f;
   font-size: 16px;
@@ -31,16 +26,14 @@ form {
 }
 
 .dropdown {
+  border: 1px solid #dfdfdf;
   height: 40px;
-  content: "All LOcations";
-  cursor: pointer;
 }
 
 .date-section {
   height: 40px;
   border-radius: 2px;
   background: #fff;
-  width: 100%;
 }
 
 .btn {
@@ -76,18 +69,12 @@ form {
   }
 }
 
-.card-section {
-  color: #1e1e1e;
-  gap: 31px;
-  margin-bottom: 28px;
-}
-
 .card {
   flex-grow: 1;
   border-radius: 2px;
-  border: none;
+  border: 1px solid #dfdfdf;
   box-shadow: #837575;
-  width: 100%;
+  color: #1e1e1e;
 
   &_top {
     margin: 14px 0 8px 15px;
@@ -139,7 +126,6 @@ form {
     width: 100%;
     height: 28px;
     border-radius: 0px 0px 2px 2px;
-    background: #8fd0e7;
     text-align: center;
     font-size: 14px;
     font-weight: 400;
@@ -147,11 +133,23 @@ form {
     justify-content: center;
     align-items: center;
   }
+
+  .date-rate-bg-1{
+    background: #8FD0E7;
+  }
+  .date-rate-bg-2{
+    background:  #8fd0e7b3;;
+  }
+  .date-rate-bg-3{
+    background:  #8fd0e780;;
+  }
+  .date-rate-bg-4{
+    background: #8fd0e74d;  }
 }
 
 .chart_section {
   height: 527px;
-  background-color: #fff;
+  border: 1px solid #dfdfdf;
 }
 
 .chart {
@@ -173,14 +171,13 @@ form {
 .input {
   flex: 1;
   &-date {
-    flex: 1.3;
+    flex: 9;
     position: relative;
   }
 }
 
 .buttons-container {
   flex: 0.7;
-  margin-left: -8px;
   margin-top: 31px;
   gap: 24px;
   svg {
@@ -229,6 +226,8 @@ p {
 
 // DATE DROPDOWNLIST AND DATE RANGE //
 ::ng-deep .date-section{
+  border: 1px solid #dfdfdf;
+
   .k-svg-i-caret-alt-down > svg {
         display: none;
   }
@@ -253,26 +252,52 @@ p {
 ::ng-deep .date-range-picker{
   .k-calendar{
     border: none;
+    min-width: 400px;
 
-    & .k-link{
+    .k-range-start,
+    .k-range-end{
+      background-color: transparent;
+    }
+
+    .k-range-start .k-link{
+      border-top-right-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
+    }
+
+    .k-range-end .k-link{
+      border-top-left-radius: 0 !important;
+      border-bottom-left-radius: 0 !important;
+    }
+
+    .k-link{
       font-size: 12px;
       color: #858585;
     }
 
-    & .k-calendar-td.k-selected .k-link{
+    .k-calendar-td.k-selected .k-link{
       background: #0B4569;
+      border-radius: 8px;
     }
   }
 
   .k-calendar-header{
     padding-top: 0px;
+    position: relative;
+    height: 35px;
+  }
+
+  .k-calendar-title{
+    position: absolute;
+    left: 70px;
+    width: 72%;
+    padding: 4px 0;
   }
     
   .k-calendar-nav{
     position: absolute;
     display: flex;
     justify-content: space-between;
-    width: 94%;
+    width: 98%;
     color:#121212;
   }
     
@@ -293,14 +318,6 @@ p {
   }
 }
 
-.margin-left-51{
-  margin-left: 51px;
-}
-
-.min-width{
-  min-width: 102px;
-}
-
 .date-range-picker{
     position: absolute;
     top: 65px;
@@ -313,14 +330,14 @@ p {
 
 .calender-heading{
   display:flex;
-  gap:135px; 
   margin-top:0px;
-  width:100%;
   font-family: 'Inter';
   color: #121212;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .date-range-summary{
@@ -343,6 +360,7 @@ p {
   font-family: 'Helvetica';
   font-size: 14px;
   font-weight: 700;
+  margin-left: auto;
 }
 
 // CALENDER BUTTONS //
@@ -382,27 +400,33 @@ p {
 
 ::ng-deep{
   .k-multiselecttree .k-input-values{
+    // padding-left: 14px;
+    // padding-right: 16px;
     gap: 0px;
-    cursor: pointer;
   }
+
   //LOCATION DROPDOWN
   .location {
     .k-input-values::before{
-      margin: 8px auto 12px 14px;
       content:"All Location";
       color: #1E1E1E;
       font-family: 'Helvetica';
       font-size: 14px;
       font-weight: 400;
+      // margin-right: auto;
+      margin: 8px auto 12px 14px;
     }
+
     .k-input-values::after{
       content: url("../../../../assets/images/chevron-down-icon.svg");
       margin-right: 14px;
       margin-top: -5px;
     }
+
     &-open{
       .k-input-values::after{
         content: url("../../../../assets/images/up-arrow.svg");
+        // margin-top: -4px;
       }
     }
   }
@@ -410,12 +434,13 @@ p {
   // ASSESSMENT DROPDOWN
   .assessment{
       .k-input-values::before{
-        margin: 8px auto 12px 14px;
         content:"All Asessments";
         color: #1E1E1E;
         font-family: 'Helvetica';
         font-size: 14px;
         font-weight: 400;
+        // margin-right: auto;
+        margin: 8px auto 12px 14px
       }
       .k-input-values::after{
         content: url("../../../../assets/images/chevron-down-icon.svg");
@@ -425,6 +450,7 @@ p {
       &-open{
         .k-input-values::after{
           content: url("../../../../assets/images/up-arrow.svg");
+          // margin-top: -4px;
         }
       }
   }
@@ -432,8 +458,8 @@ p {
     font-size: 12px;
     padding-right: 0;
     padding-left: 0;
-    margin-left: 14px;
   }
+ 
   .k-svg-i-x-circle{
     width: 14px;
   }
@@ -463,10 +489,19 @@ p {
       border-bottom: 2px solid #F6F6F6;
     }
   } 
+}
 
-  @media (min-width :1450px) and (max-width:1600px) {
-    .k-chip{
-      margin-left: 5px;
-    }
-  }
+.grid-container{
+  margin-top: 33px;
+  margin-bottom: 28px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 31px;
+  row-gap: 28px;
+}
+
+.input-action-container{
+  gap: 24px;
+  grid-column-start: 3;
+  grid-column-end: -1;
 }
